# my-project

./: .copier-answers.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml
.github/workflows/: ci.yml  main.yml  python-package.yml  tests.yml
my_project/: __init__.py  console.py
src/my_project/: __init__.py  console.py
tests/: test_console.py  test_my_project.py
