[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "my-project - A Python package that provides ..."
license = "MIT"
authors = [
    "Jane Doe <jane.doe@example.com>"
]
readme = "README.md"
repository = "https://github.com/janedoe/my-project"
keywords = ["python", "copier-pypackage"]
packages = [
    { include = "my_project", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9"
click = "*"

[tool.poetry.group.dev.dependencies]
copier = "*"
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"
pre-commit = "*"
ruff = "*"
tox = "*"
mypy = "*"

[tool.poetry.scripts]
my-project = 'my_project.console:run'

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
